[bugfix] remove gap after contact section

--- a/css/_desktop.scss
+++ b/css/_desktop.scss
@@ -12,6 +12,8 @@
 
   .about {
     margin: 100px 10%;
+    margin-bottom: 0;
+    padding-bottom: 100px;
     &__description {
       display: flex;
       align-items: center;
